k8s/argocd/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd-server
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
spec:
  ingressClassName: traefik
  # TODO: add a tls block with cert-manager ClusterIssuer.
  rules:
    - host: argocd.1mindlabs.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
